path coordinate handling
Properly captures coords for each new line and holds on data in a larger array

--- a/index.html
+++ b/index.html
@@ -1,65 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
     <title>GridTLI GUI</title>
-		<!-- load bootstrap stylesheet -->
-		<link rel="stylesheet" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
-		<!-- load custom stylesheet -->
+	<!-- load bootstrap stylesheet -->
+	<link rel="stylesheet" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
+	<!-- load custom stylesheet -->
     <link rel="stylesheet" href="style.css"></link>
-		<!-- load paper.js and canvas -->
+	<!-- load paper.js and canvas -->
     <script type="text/javascript" src="paper-full.js"></script>
     <script type="text/paperscript" canvas="canvas">
-			// Define background color for the canvas
-			var rect = new Path.Rectangle({
+		// Define background color for the canvas
+		var rect = new Path.Rectangle({
 			point: [0, 0],
 			size: [view.size.width, view.size.height],
 			fillColor: "#ccc",
 			selected: true
+		});
+		rect.sendToBack();
+		rect.selected = false;
+
+		var path;
+		var allPathsList = [];
+		var pointList = [];
+
+		var textItem = new PointText({
+			content: 'Click and drag to draw a line.',
+			point: new Point(20, 30),
+			fillColor: 'black',
+		});
+
+		function onMouseDown(event) {
+			// If we produced a path before, deselect it:
+			if (path) {
+				path.selected = false;
+			}
+
+			// Create a new path and set its stroke color to black:
+			path = new Path({
+				segments: [event.point],
+				strokeColor: 'black',
+				// Select the path, so we can see its segment points:
+				fullySelected: true
 			});
-			rect.sendToBack();
-			rect.selected = false;
+		}
 
-			var path;
+		// While the user drags the mouse, points are added to the path
+		// at the position of the mouse:
+		function onMouseDrag(event) {
+			path.add(event.point);
+			// Update the content of the text item to show how many
+			// segments it has:
+			textItem.content = 'Segment count: ' + path.segments.length + "\n";
+			// adds the x and y coords of each point to the list for the current path
+			pointList.push(event.point["x"], event.point["y"]);
+			textItem.content = 'Point Coords: ' + pointList + "\n";
+		}
 
-			var textItem = new PointText({
-					content: 'Click and drag to draw a line.',
-					point: new Point(20, 30),
-					fillColor: 'black',
-			});
+		// When the mouse is released:
+		function onMouseUp(event) {
+			var segmentCount = path.segments.length;
+			textItem.content = segmentCount;
 
-			function onMouseDown(event) {
-					// If we produced a path before, deselect it:
-					if (path) {
-							path.selected = false;
-					}
+			// add the list of points for the segment to the list of all paths
 
-					// Create a new path and set its stroke color to black:
-					path = new Path({
-							segments: [event.point],
-							strokeColor: 'black',
-							// Select the path, so we can see its segment points:
-							fullySelected: true
-					});
-			}
+			allPathsList.push(pointList);
 
-			// While the user drags the mouse, points are added to the path
-			// at the position of the mouse:
-			function onMouseDrag(event) {
-					path.add(event.point);
+			// reinitilizae the pointList
+			pointList = [];
 
-					// Update the content of the text item to show how many
-					// segments it has:
-					textItem.content = 'Segment count: ' + path.segments.length;
-			}
+			// for testing purposes, display all paths and latest path
+			numPaths = allPathsList.length;
+			textItem.content = allPathsList + "\n" + allPathsList[numPaths-1] + "\n";
 
-			// When the mouse is released:
-			function onMouseUp(event) {
-					var segmentCount = path.segments.length;
-
-					textItem.content = segmentCount;
-
-			}
+		}
     </script>
 </head>
 <body>
